Node selection + edge addition

--- a/EditableGraph.ipynb
+++ b/EditableGraph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc12dfe85e7945eab4bbc46e06833adf",
+       "model_id": "fa90880e00724e0e9d087a81033a9f5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,6 +138,15 @@
    "outputs": [],
    "source": [
     "0 is 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abs?"
    ]
   },
   {
