renaming SimpleGraphEditor into GraphEditor + related file names changes

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,14 +20,14 @@
    },
    "outputs": [],
    "source": [
-    "from phitigra import SimpleGraphEditor"
+    "from phitigra import GraphEditor"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The editor widget is a `SimpleGraphEditor` object. By default the canvas is empty; you can add vertices and edges by clicking on *add vertex or edge* and clicking on the canvas."
+    "The editor widget is a `GraphEditor` object. By default the canvas is empty; you can add vertices and edges by clicking on *add vertex or edge* and clicking on the canvas."
    ]
   },
   {
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "editor = SimpleGraphEditor()\n",
+    "editor = GraphEditor()\n",
     "editor.show()"
    ]
   },
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "G = graphs.PetersenGraph()\n",
-    "editor2 = SimpleGraphEditor(G)\n",
+    "editor2 = GraphEditor(G)\n",
     "editor2.show()"
    ]
   },
@@ -183,6 +183,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that the above requires ``pdflatex``. It  will fail if you run this demo on binder.\n",
+    "\n",
     "## Widget settings\n",
     "\n",
     "Several parameters of the widget can be changed:\n",
@@ -197,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "editor3 = SimpleGraphEditor(graphs.PetersenGraph(), width=300, height=300, default_radius=12, default_vertex_color='orange', default_edge_color='#666')\n",
+    "editor3 = GraphEditor(graphs.PetersenGraph(), width=300, height=300, default_radius=12, default_vertex_color='orange', default_edge_color='#666')\n",
     "editor3.show()"
    ]
   },
@@ -217,7 +219,7 @@
    "outputs": [],
    "source": [
     "K = graphs.RandomGNP(10, 0.5)\n",
-    "editor4 = SimpleGraphEditor(K)\n",
+    "editor4 = GraphEditor(K)\n",
     "editor4.show()"
    ]
   },
@@ -287,9 +289,8 @@
     "\n",
     "def col(i, n):\n",
     "    # Return a color depending on i\n",
-    "    rgbv = 100 + int(i * 155 / n)\n",
-    "    # return '#%02x%02x%02x' % (int(rgbv / 3), rgbv , int(rgbv / 3))\n",
-    "    return '#%02x%02x%02x' % (int(sqrt(rgbv)), rgbv , int(sqrt(rgbv)))\n",
+    "    rgbv = int(i * 255 / n)\n",
+    "    return '#%02x%02x%02x' % (100, rgbv , 255 - rgbv)\n",
     "\n",
     "# Reset the colors and sizes on the widget above\n",
     "for v in editor4.graph:\n",
@@ -372,7 +373,7 @@
    "outputs": [],
    "source": [
     "R = graphs.RandomGNP(10, 0.5)\n",
-    "editor5 = SimpleGraphEditor(R, default_vertex_color = 'white')\n",
+    "editor5 = GraphEditor(R, default_vertex_color = 'white')\n",
     "editor5.show()"
    ]
   },
@@ -411,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "editor6 = SimpleGraphEditor(graphs.PetersenGraph(), default_vertex_color = 'white')\n",
+    "editor6 = GraphEditor(graphs.PetersenGraph(), default_vertex_color = 'white')\n",
     "editor6.show()"
    ]
   },
