Updated links following the move to github

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "from phitigra import GraphEditor"
+    "from src.phitigra import GraphEditor"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "editor5.set_next_callback(greedy_path) # Define the callback for the 'Next' button"
+    "editor5.set_next_clbk(greedy_path) # Define the callback for the 'Next' button"
    ]
   },
   {
@@ -445,7 +445,7 @@
     "    widget.refresh()\n",
     "\n",
     "# Register the function as a callback for the `Next` button:\n",
-    "editor6.set_next_callback(mdscolor)"
+    "editor6.set_next_clbk(mdscolor)"
    ]
   },
   {
