--- a/demo.ipynb
+++ b/demo.ipynb
@@ -190,7 +190,8 @@
     "Several parameters of the widget can be changed:\n",
     "  * the width and height of the drawing canvas;\n",
     "  * the default radius and color for vertices;\n",
-    "  * the default color for edges."
+    "  * the default color for edges;\n",
+    "  * whether or not the display vertex and edge labels."
    ]
   },
   {
@@ -199,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "editor3 = GraphEditor(graphs.PetersenGraph(), width=300, height=300, default_radius=12, default_vertex_color='orange', default_edge_color='#666')\n",
+    "editor3 = GraphEditor(graphs.PetersenGraph(), width=300, height=300, default_radius=12, default_vertex_color='orange', default_edge_color='#666', show_vertex_labels=False)\n",
     "editor3.show()"
    ]
   },
@@ -230,7 +231,7 @@
    "outputs": [],
    "source": [
     "editor4.set_vertex_color(1, 'white') # recolor vertex 1\n",
-    "editor4.set_vertex_radius(6, 25)     # make vertex 6 bigger\n",
+    "editor4.set_vertex_radius(6, 30)     # make vertex 6 bigger\n",
     "editor4.refresh()                    # needed to update the canvas"
    ]
   },
@@ -249,22 +250,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for v in editor4.graph:\n",
-    "    # Radius depends on degree:\n",
-    "    editor4.set_vertex_radius(v, editor4.graph.degree(v)*3+5)\n",
-    "    # Color depends on parity\n",
-    "    if is_odd(v):\n",
-    "        editor4.set_vertex_color(v, '#4040dd')\n",
-    "    else:\n",
-    "        editor4.set_vertex_color(v, 'green')\n",
+    "g = graphs.GridGraph([5,5])\n",
+    "editor55 = GraphEditor(g, default_radius=30, default_vertex_color='white')\n",
+    "editor55.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below recolors the vertices depending on their distance to vertex `(3,0)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def col(i, n):\n",
+    "    # Return a color depending on i\n",
+    "    rgbv = int(i * 255 / n)\n",
+    "    return '#%02x%02x%02x' % (100, rgbv , 255 - rgbv)\n",
     "\n",
-    "for e in editor4.graph.edge_iterator():\n",
-    "    u, v, _ = e\n",
-    "    if is_odd(u + v):\n",
-    "        editor4.set_edge_color((u,v), 'orange')\n",
-    "    else:\n",
-    "        editor4.set_edge_color((u,v), 'purple')\n",
-    "editor4.refresh()"
+    "source = (3,0)\n",
+    "max_dist = max(g.distance(source, v) for v in g)\n",
+    "\n",
+    "for v in g:\n",
+    "    d = g.distance(source, v)\n",
+    "    editor55.set_vertex_color(v, col(d, max_dist))\n",
+    "editor55.refresh()"
    ]
   },
   {
@@ -275,7 +290,7 @@
     "\n",
     "### Application 5: making animations\n",
     "\n",
-    "The following code will draw a random walk of length 30 in the widget above, with colors of the vertices gradually becoming lighter. Run the cell and scroll up fast to see the result!"
+    "We now define a function that runs Dikjstra's algorithm on the graph of a `GraphEditor` widget and colors edges and vertices during when they are considered."
    ]
   },
   {
@@ -284,36 +299,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import choice\n",
+    "from random import randint, choice\n",
     "from time import sleep\n",
     "\n",
-    "def col(i, n):\n",
-    "    # Return a color depending on i\n",
-    "    rgbv = int(i * 255 / n)\n",
-    "    return '#%02x%02x%02x' % (100, rgbv , 255 - rgbv)\n",
+    "def wait():\n",
+    "    sleep(float(0.5))\n",
     "\n",
-    "# Reset the colors and sizes on the widget above\n",
-    "for v in editor4.graph:\n",
-    "    editor4.set_vertex_color(v, 'white')\n",
-    "    editor4.set_vertex_radius(v, 15)\n",
-    "for e in editor4.graph.edge_iterator():\n",
-    "    editor4.set_edge_color(e, 'black')\n",
+    "def dikjstra(w, source):\n",
+    "    G = w.graph\n",
+    "    Q = []\n",
+    "    dist = dict()\n",
+    "    prev = dict()\n",
+    "    for v in G:\n",
+    "        dist[v] = 10000 # infinity\n",
+    "        prev[v] = None\n",
+    "        Q.append(v)\n",
+    "    \n",
+    "    dist[source] = 0\n",
+    "    \n",
+    "    while Q:\n",
+    "        u = Q[0]\n",
+    "        \n",
+    "        for v in Q:\n",
+    "            if dist[v] < dist[u]:\n",
+    "                u = v\n",
+    "        Q.remove(u)\n",
+    "        w.set_vertex_color(u, 'red')\n",
+    "        w.refresh()\n",
+    "        wait()\n",
+    "        \n",
+    "        for v in G.neighbor_iterator(u):\n",
+    "            if v not in Q:\n",
+    "                continue\n",
+    "            alt = dist[u] + G.edge_label(u,v)\n",
+    "            if alt < dist[v]:\n",
+    "                # update\n",
+    "                if prev[v] is not None:\n",
+    "                    w.set_edge_color((v, prev[v]), 'cyan')\n",
+    "                \n",
+    "                dist[v] = alt\n",
+    "                prev[v] = u\n",
+    "                w.set_edge_color((u,v), 'orange')\n",
+    "            else:\n",
+    "                w.set_edge_color((u,v), 'lightgray')\n",
+    "            w.refresh()\n",
+    "            wait()\n",
+    "        w.set_vertex_color(u, 'orange')\n",
+    "        if u == source:\n",
+    "            w.set_vertex_color(u, 'purple')\n",
+    "    w.set_vertex_color(u, 'orange')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = graphs.GridGraph([5,5])\n",
+    "# Give random labels to edges\n",
+    "for u,v in g.edge_iterator(labels=False):\n",
+    "    g.set_edge_label(u,v, randint(0,50))\n",
     "\n",
-    "n=30    \n",
-    "v = choice(editor4.graph.vertices())\n",
-    "editor4.set_vertex_color(v, col(0, n))\n",
-    "editor4.refresh()\n",
-    "sleep(2)\n",
+    "editor555 = GraphEditor(g, default_radius=15, default_vertex_color='white', show_vertex_labels=False)\n",
+    "editor555.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following runs Dikjstra's algorithm on the graph above.\n",
+    "A vertex is:\n",
     "\n",
-    "for i in range(1, n):\n",
-    "        sleep(float(0.5)) # wait\n",
-    "        u = choice(editor4.graph.neighbors(v))\n",
-    "        color = col(i, n)\n",
-    "        editor4.set_vertex_color(u, color)\n",
-    "        editor4.set_edge_color((v, u), color)\n",
-    "        v = u\n",
-    "        editor4.refresh()\n",
-    "    "
+    "  * purple if it is the source\n",
+    "  * red if it is the currently considered vertex\n",
+    "  * orange if it has already been considered\n",
+    "  \n",
+    "An edge is:\n",
+    "\n",
+    "  * black if it has not been considered\n",
+    "  * orange if it is currently part of a shortest path\n",
+    "  * blue if it has been shortcut\n",
+    "  * grey if it has been considered and is not a shortcut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dikjstra(editor555, choice(editor555.graph.vertices()))"
    ]
   },
   {
@@ -454,11 +531,18 @@
    "source": [
     "Now you can click on *Next* on the widget above. After each click, a new minimal dominating set of the graph will be shown with green vertices!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.2.beta13",
+   "display_name": "SageMath 9.5.beta0",
    "language": "sage",
    "name": "sagemath"
   },
@@ -472,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
