Updated demo notebook

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that only the positions of the vertices will be kept. See [this page](https://doc.sagemath.org/html/en/tutorial/latex.html#an-example-combinatorial-graphs-with-tkz-graph) for more details about exporting graphs to latex. The resulting pdf image can be seen as follows."
+    "Note that only the positions of the vertices will be kept. See [this page](https://doc.sagemath.org/html/en/tutorial/latex.html#an-example-combinatorial-graphs-with-tkz-graph) for more details about exporting graphs to latex . The resulting pdf image can be seen as follows."
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the above requires ``pdflatex``. It  will fail if you run this demo on binder.\n",
+    "The above requires ``pdflatex``. It  will fail if you run this demo on binder.\n",
     "\n",
     "## Widget settings\n",
     "\n",
@@ -210,7 +210,9 @@
    "source": [
     "## Changing the drawing\n",
     "\n",
-    "Changes to the drawing can be done with the mouse of course, but also by calling appropriate functions."
+    "Changes to the drawing can be done with the mouse of course, but also by calling appropriate functions.\n",
+    "\n",
+    "### Automatically setting positions"
    ]
   },
   {
@@ -219,19 +221,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = graphs.RandomGNP(10, 0.5)\n",
-    "editor4 = GraphEditor(K)\n",
+    "K = graphs.RandomBipartite(5,5,0.75)\n",
+    "editor4 = GraphEditor(K, width = 500, height = 500)\n",
     "editor4.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph drawn above is bipartite and the partition numbe of a vertex is the first coordinate of its label. The code below sorts and colors vertices according to their partition number and changes their size according to the second coordinate of their label."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "editor4.set_vertex_color(1, 'white') # recolor vertex 1\n",
-    "editor4.set_vertex_radius(6, 30)     # make vertex 6 bigger\n",
+    "for v in editor4.graph:\n",
+    "    p, i = v\n",
+    "    \n",
+    "    editor4.set_vertex_radius(v, 3 * i + 25)\n",
+    "    if p:\n",
+    "        editor4.set_vertex_pos(v, 100, 50 +  100 * i)\n",
+    "        # editor4.set_vertex_color(v, 'red')\n",
+    "    else:\n",
+    "        editor4.set_vertex_pos(v, 400, 50 + 100 * i)\n",
+    "        #editor4.set_vertex_color(v, 'lightblue')\n",
+    "    \n",
     "editor4.refresh()                    # needed to update the canvas"
    ]
   },
@@ -239,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Application 4: automatically setting colors\n",
+    "### Automatically setting colors\n",
     "\n",
     "The colors of the vertices and edges can be defined by a function."
    ]
@@ -250,16 +268,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = graphs.GridGraph([5,5])\n",
-    "editor55 = GraphEditor(g, default_radius=30, default_vertex_color='white')\n",
-    "editor55.show()"
+    "n = 10\n",
+    "g = graphs.GridGraph([n,n])\n",
+    "editor5 = GraphEditor(g, default_radius=15, default_vertex_color='white')\n",
+    "editor5.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code below recolors the vertices depending on their distance to vertex `(3,0)`."
+    "The code below recolors the vertices depending on their distance to vertex `(2,0)`."
    ]
   },
   {
@@ -273,22 +292,21 @@
     "    rgbv = int(i * 255 / n)\n",
     "    return '#%02x%02x%02x' % (100, rgbv , 255 - rgbv)\n",
     "\n",
-    "source = (3,0)\n",
-    "max_dist = max(g.distance(source, v) for v in g)\n",
+    "x,y = (2, 0) # source\n",
+    "# maximum distance to (x,y) in the graph\n",
+    "max_dist = max(x, n - 1 - x) + max(y, n - 1 -y)\n",
     "\n",
     "for v in g:\n",
-    "    d = g.distance(source, v)\n",
-    "    editor55.set_vertex_color(v, col(d, max_dist))\n",
-    "editor55.refresh()"
+    "    d = g.distance((x, y), v)\n",
+    "    editor5.set_vertex_color(v, col(d, max_dist))\n",
+    "editor5.refresh()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the size of the vertices shapes in the widget above depend on the degree of the vertices and the color of the vertices and edges depend on the parity of the vertices names.\n",
-    "\n",
-    "### Application 5: making animations\n",
+    "## Making animations\n",
     "\n",
     "We now define a function that runs Dikjstra's algorithm on the graph of a `GraphEditor` widget and colors edges and vertices during when they are considered."
    ]
@@ -305,16 +323,12 @@
     "def wait():\n",
     "    sleep(float(0.5))\n",
     "\n",
-    "def dikjstra(w, source):\n",
+    "def widget_dikjstra(w, source):\n",
+    "    # Adapted from the pseudocode at https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm#Pseudocode\n",
     "    G = w.graph\n",
-    "    Q = []\n",
-    "    dist = dict()\n",
-    "    prev = dict()\n",
-    "    for v in G:\n",
-    "        dist[v] = 10000 # infinity\n",
-    "        prev[v] = None\n",
-    "        Q.append(v)\n",
-    "    \n",
+    "    Q = G.vertices()\n",
+    "    prev = {v: None for v in G}\n",
+    "    dist = {v: 10000 for v in G}  # 10000 aka infinity\n",
     "    dist[source] = 0\n",
     "    \n",
     "    while Q:\n",
@@ -339,6 +353,7 @@
     "                \n",
     "                dist[v] = alt\n",
     "                prev[v] = u\n",
+    "                w.set_vertex_color(v, 'green')\n",
     "                w.set_edge_color((u,v), 'orange')\n",
     "            else:\n",
     "                w.set_edge_color((u,v), 'lightgray')\n",
@@ -347,7 +362,7 @@
     "        w.set_vertex_color(u, 'orange')\n",
     "        if u == source:\n",
     "            w.set_vertex_color(u, 'purple')\n",
-    "    w.set_vertex_color(u, 'orange')"
+    "    w.refresh()"
    ]
   },
   {
@@ -361,27 +376,29 @@
     "for u,v in g.edge_iterator(labels=False):\n",
     "    g.set_edge_label(u,v, randint(0,50))\n",
     "\n",
-    "editor555 = GraphEditor(g, default_radius=15, default_vertex_color='white', show_vertex_labels=False)\n",
-    "editor555.show()"
+    "editor6 = GraphEditor(g, default_radius=15, default_vertex_color='white', show_vertex_labels=False)\n",
+    "editor6.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following runs Dikjstra's algorithm on the graph above.\n",
+    "The following runs Dikjstra's algorithm on the graph above, where edge labels represent distances\n",
     "A vertex is:\n",
     "\n",
-    "  * purple if it is the source\n",
-    "  * red if it is the currently considered vertex\n",
-    "  * orange if it has already been considered\n",
-    "  \n",
+    "  * white if it has not been discovered yet;\n",
+    "  * green if it has been discovered and not processed yet;\n",
+    "  * red if it is being processed;\n",
+    "  * orange if it has been processed;\n",
+    "  * purple if it is the source.\n",
+    "\n",
     "An edge is:\n",
     "\n",
-    "  * black if it has not been considered\n",
-    "  * orange if it is currently part of a shortest path\n",
-    "  * blue if it has been shortcut\n",
-    "  * grey if it has been considered and is not a shortcut"
+    "  * black if it has not been considered;\n",
+    "  * orange if it is currently part of a shortest path;\n",
+    "  * blue if it has been shortcut;\n",
+    "  * grey if it has been considered and is not a shortcut."
    ]
   },
   {
@@ -390,28 +407,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dikjstra(editor555, choice(editor555.graph.vertices()))"
+    "widget_dikjstra(editor6, choice(editor6.graph.vertices()))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calling a custom function by mouse clicks"
+    "## Running an algorithm step by step"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a *Next* button on the widget. It can be set to call a custom function that changes the drawn graph.\n",
-    "\n",
-    "Below we define a function that takes as input a graph editor widget and performs the following on its graph:\n",
-    "  \n",
-    "  * when first called, it choses a random vertex, colors it and stores it as a private variable of the widget;\n",
-    "  * on the subsequent calls, it choses a random neighbor of the last previously chosen vertex that has not been considered yet, if any, colors it and stores it as well in the widget object.\n",
-    "  \n",
-    "By registering this function as the callback for the *Next* button, we are able to see the different steps of the construction of a maximal path by clicking repeteadly on *Next*.\n"
+    "A drawback of the animation described in the previous section is that one cannot pause it, which could be convenient in order to explain how the algorithm goes from one step to the next one. We show here how one can present the BFS algorithm step by step with the `GraphEditor` widget. For this we define below a function `widget_BFS` that returns a generator. Each time an element is extracted from this generator, a new step of the algorithm is ran and the drawing is updated. We can then define a button widget to run the algorithm step by step. This can also be used to test and debug an algorithm on specific graphs."
    ]
   },
   {
@@ -420,27 +430,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import choice\n",
-    "\n",
-    "def greedy_path(widget):\n",
-    "    # Greedily construct path starting at a random vertex\n",
-    "    if not hasattr(widget, '_path'):\n",
-    "        first = choice(widget.graph.vertices())   # The path starts at a random vertex\n",
-    "        widget._path = [first]                    # We use the widget to store the state of the algorithm\n",
-    "        widget.set_vertex_color(first, 'orange')\n",
-    "        widget.refresh()\n",
-    "        return\n",
-    "    last = widget._path[-1]\n",
+    "def widget_BFS(w, source):\n",
     "    \n",
-    "    free_neighbors = [v for v in widget.graph.neighbor_iterator(last) if not v in widget._path]\n",
-    "    if not free_neighbors:\n",
-    "        widget.output_text('The path cannot be extended!')\n",
-    "    else:\n",
-    "        nextv = choice(free_neighbors)  \n",
-    "        widget._path.append(nextv)\n",
-    "        widget.set_vertex_color(nextv, 'red')\n",
-    "        widget.set_edge_color((last, nextv), 'red')\n",
-    "        widget.refresh()    "
+    "    G = w.graph\n",
+    "    queue = [source]\n",
+    "    prev = {v: None for v in G}\n",
+    "    prev[source] = source\n",
+    "    \n",
+    "    while queue:\n",
+    "        \n",
+    "        # Take a new vertex in the queue\n",
+    "        v = queue.pop(0)\n",
+    "        w.set_vertex_color(v, 'red')\n",
+    "        w.refresh()\n",
+    "        yield None\n",
+    "        \n",
+    "        # Add all its neighbors to the queue if they have not already been considered\n",
+    "        for u in w.graph.neighbor_iterator(v):\n",
+    "            if prev[u] is not None: # u has already been seen\n",
+    "                if prev[v] != u and not w.get_edge_color((u,v)) == 'lightgray':  \n",
+    "                    w.set_edge_color((u,v), 'lightgray')\n",
+    "                    w.refresh()\n",
+    "                    yield None\n",
+    "            else:\n",
+    "                queue.append(u)\n",
+    "                prev[u] = v\n",
+    "                w.set_vertex_color(u, 'green')\n",
+    "                w.set_edge_color((u,v), 'orange')\n",
+    "                w.refresh()\n",
+    "                yield None\n",
+    "\n",
+    "        if v is source:\n",
+    "            w.set_vertex_color(v, 'purple')\n",
+    "        else:\n",
+    "            w.set_vertex_color(v, 'orange')\n",
+    "    w.set_vertex_color(v, 'orange')\n",
+    "    w.refresh()"
    ]
   },
   {
@@ -449,38 +474,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "R = graphs.RandomGNP(10, 0.5)\n",
-    "editor5 = GraphEditor(R, default_vertex_color = 'white')\n",
-    "editor5.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "editor5.set_next_clbk(greedy_path) # Define the callback for the 'Next' button"
+    "editor6 = GraphEditor(graphs.GridGraph([4,4]), default_radius=20, default_vertex_color='white', show_vertex_labels=False)\n",
+    "\n",
+    "gen = widget_BFS(editor6, source=choice(editor6.graph.vertices()))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now clicks on *Next* update the graph !"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Application 6: presenting algorithms\n",
-    "\n",
-    "The callback for the *Next* button can be used to run an algorithm step-by-step on an example graph during a lecture. For instance to display the computation of a shortest path, a spanning tree, a BFS search, etc.\n",
-    "\n",
-    "### Application 7: testing algorithms\n",
-    "\n",
-    "It can also be used to try a function on small instances or to debug."
+    "Now we define a button widget to run the algorithm"
    ]
   },
   {
@@ -489,7 +492,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "editor6 = GraphEditor(graphs.PetersenGraph(), default_vertex_color = 'white')\n",
+    "from ipywidgets import Button\n",
+    "\n",
+    "button = Button(\n",
+    "    description='Next step',\n",
+    "    disabled=False,\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='next step',\n",
+    "    icon='forward' # (FontAwesome names without the `fa-` prefix)\n",
+    ")\n",
+    "\n",
+    "def button_clbk(b):\n",
+    "    try:\n",
+    "        next(gen)\n",
+    "    except StopIteration:\n",
+    "        b.disabled = True\n",
+    "\n",
+    "# tie the button to button_clbk\n",
+    "button.on_click(button_clbk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "editor6.show()"
    ]
   },
@@ -499,37 +527,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mdscolor(widget):\n",
-    "    \"Color the vertices with minimal dominating sets\"\n",
-    "    if not hasattr(widget, '_mds'):\n",
-    "        widget._mds = widget.graph.minimal_dominating_sets() # an iterator over minimal dominating sets\n",
-    "        widget.output_text('Showing the minimal dominating sets...')\n",
-    "    \n",
-    "    try:\n",
-    "        D = next(widget._mds)\n",
-    "    except StopIteration:\n",
-    "        widget.output_text('Done! Back to the initial state.')\n",
-    "        for v in widget.graph:\n",
-    "            widget.set_vertex_color(v, 'white')\n",
-    "        widget.refresh()        \n",
-    "        del widget._mds\n",
-    "        return\n",
-    "    \n",
-    "    for v in widget.graph:\n",
-    "        widget.set_vertex_color(v, 'white')\n",
-    "    for v in D:\n",
-    "        widget.set_vertex_color(v, 'green')\n",
-    "    widget.refresh()\n",
-    "\n",
-    "# Register the function as a callback for the `Next` button:\n",
-    "editor6.set_next_clbk(mdscolor)"
+    "button "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can click on *Next* on the widget above. After each click, a new minimal dominating set of the graph will be shown with green vertices!"
+    "In the drawing above, a vertex is:\n",
+    "\n",
+    "  * white if it has not been discovered yet\n",
+    "  * green if it belongs to the queue (discovered and not processed yet)\n",
+    "  * red if it is being processed\n",
+    "  * orange if it has been processed\n",
+    "  * purple if it is the source.\n",
+    "  \n",
+    "An edge is\n",
+    "\n",
+    "  * black if it has not been traversed yet\n",
+    "  * orange if it has been traversed to see a new vertex\n",
+    "  * gray if it has been traversed to see an already known vertex."
    ]
   },
   {
