--- a/demo.ipynb
+++ b/demo.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -217,9 +217,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0cf9ec1eea374ccf93549842c296f585",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(MultiCanvas(layout=Layout(border='3px solid lightgrey', height='506px', overflow…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "K = graphs.RandomBipartite(5,5,0.75)\n",
     "editor4 = GraphEditor(K, width = 500, height = 500)\n",
@@ -235,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,16 +272,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Automatically setting colors\n",
-    "\n",
-    "The colors of the vertices and edges can be defined by a function."
+    "The names of the vertices are by default the vertex labels, but can be changed by redefining the `get_vertex_label` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def label(v):\n",
+    "    p, i = v\n",
+    "    return ('left ' if p else 'right ') + str(i)\n",
+    "\n",
+    "editor4.get_vertex_label = label\n",
+    "editor4.refresh()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Automatically setting colors\n",
+    "\n",
+    "The colors of the vertices and edges can also be defined by a function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6ec607194f754e1185da686e3002927b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(MultiCanvas(height=400, layout=Layout(border='3px solid lightgrey', height='406p…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "n = 10\n",
     "g = graphs.GridGraph([n,n])\n",
@@ -278,12 +329,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code below recolors the vertices depending on their distance to vertex `(2,0)`."
+    "The code below recolors the vertices depending on their distance to vertex `(3,1)`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +343,7 @@
     "    rgbv = int(i * 255 / n)\n",
     "    return '#%02x%02x%02x' % (100, rgbv , 255 - rgbv)\n",
     "\n",
-    "x,y = (2, 0) # source\n",
+    "x,y = (3, 1) # source\n",
     "# maximum distance to (x,y) in the graph\n",
     "max_dist = max(x, n - 1 - x) + max(y, n - 1 -y)\n",
     "\n",
@@ -313,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,9 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f4e302f5f1074025b28f85091c69a76d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(MultiCanvas(height=400, layout=Layout(border='3px solid lightgrey', height='406p…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "g = graphs.GridGraph([5,5])\n",
     "# Give random labels to edges\n",
@@ -403,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,18 +580,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9fde030cabaf491fb3ac182cc16e46a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(MultiCanvas(height=400, layout=Layout(border='3px solid lightgrey', height='406p…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "editor6.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "965d0b5919ae4a2a9169b0e8acdfa1c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Next step', icon='forward', style=ButtonStyle(), tooltip='next step')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "button "
    ]
@@ -550,11 +646,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus: step-by-step Dijkstra with distances"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def step_by_step_dijkstra(w, source):\n",
+    "    # Adapted from the pseudocode at https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm#Pseudocode\n",
+    "    G = w.graph\n",
+    "    Q = G.vertices()\n",
+    "    prev = {v: None for v in G}\n",
+    "    w.dist = {v: '∞' for v in G}\n",
+    "    w.dist[source] = 0\n",
+    "    \n",
+    "    while Q:\n",
+    "        u = Q[0]\n",
+    "        \n",
+    "        for v in Q:\n",
+    "            if w.dist[v] == '∞':\n",
+    "                continue\n",
+    "            if w.dist[u] == '∞' or w.dist[v] < w.dist[u]:\n",
+    "                u = v\n",
+    "        Q.remove(u)\n",
+    "        w.set_vertex_color(u, 'red')\n",
+    "        w.refresh()\n",
+    "        yield\n",
+    "        \n",
+    "        for v in G.neighbor_iterator(u):\n",
+    "            if v not in Q:\n",
+    "                continue\n",
+    "            alt = w.dist[u] + G.edge_label(u,v)\n",
+    "            if w.dist[v] == '∞' or alt < w.dist[v]:\n",
+    "                # update\n",
+    "                if prev[v] is not None:\n",
+    "                    w.set_edge_color((v, prev[v]), 'cyan')\n",
+    "                \n",
+    "                w.dist[v] = alt\n",
+    "                prev[v] = u\n",
+    "                w.set_vertex_color(v, 'green')\n",
+    "                w.set_edge_color((u,v), 'orange')\n",
+    "            else:\n",
+    "                w.set_edge_color((u,v), 'lightgray')\n",
+    "            w.refresh()\n",
+    "            yield\n",
+    "        w.set_vertex_color(u, 'orange')\n",
+    "        if u == source:\n",
+    "            w.set_vertex_color(u, 'purple')\n",
+    "    w.refresh()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = graphs.GridGraph([5,5])\n",
+    "# Give random labels to edges\n",
+    "for u,v in g.edge_iterator(labels=False):\n",
+    "    g.set_edge_label(u,v, randint(0,50))\n",
+    "\n",
+    "editor7 = GraphEditor(g, default_radius=20, default_vertex_color='white')\n",
+    "editor7.dist = {v: None for v in editor6.graph}\n",
+    "\n",
+    "editor7.get_vertex_label = lambda v: str(editor7.dist[v])\n",
+    "\n",
+    "button = Button(\n",
+    "    description='Next step',\n",
+    "    disabled=False,\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='next step',\n",
+    "    icon='forward' # (FontAwesome names without the `fa-` prefix)\n",
+    ")\n",
+    "\n",
+    "gen = step_by_step_dijkstra(editor7, choice(editor7.graph.vertices()))\n",
+    "\n",
+    "def button_clbk(b):\n",
+    "    try:\n",
+    "        next(gen)\n",
+    "    except StopIteration:\n",
+    "        b.disabled = True\n",
+    "\n",
+    "# tie the button to button_clbk\n",
+    "button.on_click(button_clbk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7583251e4f8242b0868ec2a04e548d65",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(MultiCanvas(height=400, image_data=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "editor7.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8966b1e1656d47e39ef18cfc995cbed8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Next step', icon='forward', style=ButtonStyle(), tooltip='next step')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "button"
+   ]
   }
  ],
  "metadata": {
